<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_popular_movies">PopularMoviesActivity</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="text_error_text_view">Unable to load data</string>
    <string name="text_loading_">Loading&#8230;</string>
    <string name="movie_poster_content_description"> Movie poster for %1$s</string>
    <string name="mark_as_favourite_image">Mark as favourite image</string>
    <string name="release_date_text_view_label">Release Date: </string>
    <string name="rating_text_view_label">Rating: </string>
    <string name="overview_text_view_label">Overview</string>
    <string name="default_text">Not Found</string>
    <string name="turn_on_internet">Please turn on your internet connection</string>
    <string name="connected">Connected!</string>
    <string name="is_not_connected">Please turn on your internet connection</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="removed_from_favorites">Removed from Favourites</string>
    <string name="action_favourites_text">Favourites</string>
    <string name="action_sort_by_popularity_text">Sort by Popularity</string>
    <string name="action_sort_by_top_rated_text">Sort by Ratings</string>
    <string name="sorting_by_popularity">Sorting by Popularity&#8230;</string>
    <string name="sorting_by_rating">Sorting by Rating</string>
    <string name="title_activity_favourites">Favourite Movies</string>
    <string name="unknown_uri">Unknown Uri:</string>
    <string name="failed_to_insert">Failed to insert row into </string>
    <string name="reviews_header">Reviews</string>
    <string name="no_reviews">No Reviews</string>
    <string name="trailers_header">Trailers</string>
    <string name="no_trailers">No Trailers</string>
    <string name="trailer_video_icon">Trailer Video Icon</string>
    <string name="trailer_url_id">trailer url id</string>
    <string name="author">Author Avatar</string>
    <string name="all_trailers">ALL TRAILERS</string>
    <string name="all_reviews">ALL REVIEWS</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
    <string name="reviews_title">Reviews for %s</string>
    <string name="title_activity_trailers">TrailersActivity</string>
    <string name="trailers_activity_title">Trailers for %s</string>
    <string name="chooser_msg">Select App to Play Video</string>
    <string name="trailers">TRAILERS</string>
    <string name="overview">OVERVIEW</string>
    <string name="reviews">REVIEWS</string>
</resources>
