<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout = "@layout/activity_popular_movies">

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="1"
        android:title="@string/action_favourites_text"
        android:icon="@drawable/ic_star_black_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_sort_by_rating"
        android:orderInCategory="2"
        android:title="@string/action_sort_by_top_rated_text"
        />

    <item
        android:id="@+id/action_sort_by_popularity"
        android:orderInCategory="3"
        android:title="@string/action_sort_by_popularity_text"/>
</menu>