<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text = "@string/trailers" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailers_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="@dimen/fab_margin"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/trailers_error_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"
                        app:srcCompat = "@drawable/cloud_error"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/error_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/trailers_error_image_view"
                        android:layout_centerHorizontal="true"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textSize="32sp"
                        android:text="@string/text_error_text_view"
                        android:visibility="invisible"
                        />

                    <ProgressBar
                        android:id="@+id/trailers_loading_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="invisible"
                        />

                    <TextView
                        android:id="@+id/trailers_loading_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/trailers_loading_progress_bar"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif"
                        android:text="@string/text_loading_"
                        android:textColor="@color/colorAccent"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:visibility="invisible"/>

                </RelativeLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/no_trailers_text_view"
                style="@style/OtherLabelsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_trailers"
                android:visibility="gone"
                tools:textColor="@android:color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <Button
                android:id="@+id/all_trailers_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_state"
                android:textAppearance="?android:textAppearanceMedium"
                android:drawableRight="@drawable/ic_navigate_next_black_24dp"
                android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
                android:text="@string/all_trailers"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>